--- a/styles/artisan.less
+++ b/styles/artisan.less
@@ -1,6 +1,7 @@
 .artisan.result-view .results {
   height: 100%;
   overflow-y: scroll;
+  padding-bottom: 20px;
 }
 
 .artisan.result-view .results pre {
