--- a/styles/artisan.less
+++ b/styles/artisan.less
@@ -1,33 +1,9 @@
-.artisan.result-view .results {
+.artisan-result-view {
   height: 100%;
   overflow-y: scroll;
   padding-bottom: 20px;
 }
 
-.artisan.result-view .results pre {
+.artisan-result-view pre {
   height: 100%;
-}
-
-
-.artisan-resize-handle {
-  cursor: ns-resize;
-  height: 5px;
-  position: absolute;
-  top: 0;
-  z-index: 3;
-  width: 100%;
-}
-
-.artisan-close-icon::before {
-  font-family: 'Octicons Regular';
-  font-size: 12px;
-  width: 12px;
-  height: 12px;
-  content: "\f081";
-  position: absolute;
-  right: 10px;
-}
-
-.artisan-close-icon:hover {
-  color: @text-color-highlight;
 }
